# hotel-system

./: .gitignore  README.md  hotel-system.cabal  main.hs  serialized_data.txt
Entities/: HistoryItem.hs  Hotel.hs  Person.hs  Room.hs  RoomComfortItem.hs
core/: HotelCore.hs  Rent.hs  RentCore.hs  UserCore.hs
entities/: HistoryItem.hs  Hotel.hs  PersonBase.hs  Room.hs  RoomComfortItem.hs  Tenant.hs
exec/: Combiner.hs  Main.hs  main.glade  main.glade~
src/: Main.hs  main.glade  main.glade~
src/Core/: Rent.hs
src/Core/Utils/: DayChecks.hs
src/Entities/: Employe.hs  HistoryItem.hs  Hotel.hs  PersonBase.hs  Room.hs  RoomComfortItem.hs  Tenant.hs  VacationItem.hs
src/View/: Connectors.hs  Extracters.hs  Extractors.hs  Misc.hs  Mutation.hs
utils/: DayChecks.hs
view/: Connectors.hs  Extractors.hs  Misc.hs  Mutation.hs  ViewID.hs
