name:                hotel-system
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/andrwnv/hotel-system#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew G.
maintainer:          -
copyright:           2022 Andrew G.
category:            Desktop
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hotel-system
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gi-gtk
                     , haskell-gi-base
                     , gi-gio
                     , text
                     , gi-gdk
                     , time
