name:                hotel-system
version:             0.1
homepage:            https://github.com/andrwnv/hotel-system#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew G.
maintainer:          -
copyright:           2022 Andrew G.
category:            Desktop
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library Entities
  hs-source-dirs:      entities
  exposed-modules:     HistoryItem, Hotel, PersonBase, Room, Tenant
  build-depends:       base >= 4.7 && < 5, time
  default-language:    Haskell2010

library View
  hs-source-dirs:      view
  exposed-modules:     Connectors, Extractors, Misc, Mutation, ViewID
  build-depends:       base >= 4.7 && < 5, text, time
                     , haskell-gi-base
                     , gi-gtk
                     , gi-gio
                     , gi-gdk
  default-language:    Haskell2010

library Utils
  hs-source-dirs:      utils
  exposed-modules:     DayChecks
  build-depends:       base >= 4.7 && < 5, time
  default-language:    Haskell2010

library Core
  hs-source-dirs:      core
  exposed-modules:     RentCore, UserCore, HotelCore
  build-depends:       base >= 4.7 && < 5, time, Entities, Utils
  default-language:    Haskell2010

executable HotelSystem
  hs-source-dirs:      exec
  main-is:             Main.hs
  other-modules:       Combiner
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, text, time
                     , Entities
                     , View
                     , Core
                     , Utils
                     , haskell-gi-base
                     , gi-gtk
                     , gi-gdk
